<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Academic ID Inspector</string>

    <string name="lbl_username">Username:</string>
    <string name="lbl_password">Password:</string>
    <string name="lbl_sign_in">Sign In</string>

    <string name="msg_wait">Please wait…</string>
    <string name="msg_incorrect_credentials">Incorrect username or password</string>
    <string name="msg_no_camera_available">Rear Facing Camera Unavailable</string>

    <string name="title_no_net_available">No Network Connection</string>
    <string name="msg_no_net_available">To enable network connection touch Next</string>
    <string name="action_next">Next</string>
    <string name="action_close">Close</string>

    <string name="lbl_init_message">Scan QR code or enter serial number</string>
    <string name="lbl_scan_qr">Scan QR Code</string>
    <string name="lbl_enter_serial">Enter Serial Number</string>
    <string name="lbl_exit">Press again to exit</string>

    <string name="lbl_valid">VALID</string>
    <string name="lbl_invalid">INVALID</string>
    <string name="lbl_serial_no">Serial Number:</string>
    <string name="lbl_name">Name:</string>
    <string name="lbl_university">University Location:</string>
    <string name="lbl_residence">Resident:</string>
    <string name="lbl_errorCode">Reason:</string>

    <string name="msg_invalid_input">Input is not a valid Academic ID</string>
    <string name="msg_error_inspecting_academicId">Error trying to inspect academic ID</string>

    <string name="menu_settings">Settings</string>

    <string name="title_change_password">Change Password</string>
    <string name="msg_change_password">Change the user password</string>

    <string name="lbl_current_password">Current Password:</string>
    <string name="lbl_new_password">New Password:</string>
    <string name="lbl_new_password_confirmation">Confirm New Password:</string>
    <string name="lbl_cancel">Cancel</string>
    <string name="lbl_confirm">Confirm</string>

    <string name="msg_password_change_required">Password changed required</string>
    <string name="msg_incorrect_current_password">Current password is incorrect</string>
    <string name="msg_new_passwords_dont_match">The new passwords don\'t match</string>
    <string name="msg_password_too_short">Password must contain at least 4 characters</string>
    <string name="msg_new_current_password_same">New and current password should not be the same</string>
    <string name="msg_error_changing_password">Error trying to update user password</string>
</resources>