<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:padding="10dp">
    <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:fillViewport="true">
        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal">
            <TextView
                    android:id="@+id/txtv_inspection_result"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:visibility="gone"
                    android:layout_marginBottom="5dp"/>
            <TextView
                    android:id="@+id/lbl_serial_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginBottom="5dp"
                    style="@style/label"
                    android:layout_below="@id/txtv_inspection_result"
                    android:visibility="gone"
                    android:text="@string/lbl_serial_no"/>
            <TextView
                    android:id="@+id/txtv_serial_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginBottom="5dp"
                    android:layout_below="@id/lbl_serial_number"
                    android:visibility="gone"
                    style="@style/view_text"/>

            <TextView
                    android:id="@+id/lbl_concat_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginBottom="5dp"
                    style="@style/label"
                    android:layout_below="@id/txtv_serial_number"
                    android:visibility="gone"
                    android:text="@string/lbl_name"/>

            <TextView
                    android:id="@+id/txtv_concat_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginBottom="5dp"
                    android:layout_below="@id/lbl_concat_name"
                    android:visibility="gone"
                    style="@style/view_text"/>

            <TextView
                    android:id="@+id/lbl_university"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginBottom="5dp"
                    style="@style/label"
                    android:layout_below="@id/txtv_concat_name"
                    android:visibility="gone"
                    android:text="@string/lbl_university"/>

            <TextView
                    android:id="@+id/txtv_university"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginBottom="5dp"
                    android:layout_below="@id/lbl_university"
                    android:visibility="gone"
                    style="@style/view_text"/>

            <TextView
                    android:id="@+id/lbl_residence"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginBottom="5dp"
                    style="@style/label"
                    android:layout_below="@id/txtv_university"
                    android:visibility="gone"
                    android:text="@string/lbl_residence"/>

            <TextView
                    android:id="@+id/txtv_residence"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginBottom="5dp"
                    android:layout_below="@id/lbl_residence"
                    android:visibility="gone"
                    style="@style/view_text"/>

            <TextView
                    android:id="@+id/lbl_inspection_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginBottom="5dp"
                    android:layout_below="@id/txtv_residence"
                    android:text="@string/lbl_errorCode"
                    android:visibility="gone"/>

            <TextView
                    android:id="@+id/txtv_inspection_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginBottom="5dp"
                    android:layout_below="@id/lbl_inspection_description"
                    style="@style/view_text"
                    android:visibility="gone"/>
            <TextView
                    android:id="@+id/lbl_init_message"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:textStyle="bold|italic"
                    style="@style/view_text"
                    android:text="@string/lbl_init_message"/>
        </RelativeLayout>
    </ScrollView>

    <Button
            android:id="@+id/btn_scan_qr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/lbl_scan_qr"
            android:onClick="scanQR"/>
    <RelativeLayout
            android:id="@+id/rellay_serial_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">
        <ImageButton
                android:id="@+id/btn_check_serial"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:contentDescription="@null"
                android:src="@drawable/action_search"
                android:onClick="checkSerialNo"/>
        <EditText
                android:id="@+id/etxt_serial_number"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toLeftOf="@id/btn_check_serial"
                android:layout_toRightOf="@+id/btn_clear_serial"
                android:layout_alignBottom="@id/btn_check_serial"
                android:layout_marginTop="4dp"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:maxLength="12"
                android:hint="@string/lbl_enter_serial"/>
        <ImageButton
                android:id="@+id/btn_clear_serial"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:contentDescription="@null"
                android:src="@drawable/content_remove"
                android:onClick="clearContent"/>
    </RelativeLayout>
</LinearLayout>